# blankly_rsi_example_with_docker

./: .gitignore  Dockerfile.backtest  Dockerfile.live  Dockerfile.papertrade  README.md  backtest.json  bot.html  bot_core.py  bot_footer_backtest.py  bot_footer_live.py  bot_footer_papertrade.py  bot_header.py  bot_run_backtest.py  bot_run_live.py  bot_run_papertrade.py  db.py  keys.json  optim.py  parameter_explorer.py  postprocessing.py  preprocessing.py  pyproject.toml  requirements.backtest.txt  requirements.txt  runner.py  settings.json  test_parameter_explorer.py  test_parameters_explorer.py  utils.py
data/: XBTUSDT.parquet  XBTUSDT_1D.csv
docker/backtest/: docker-compose.yml
docker/live/: docker-compose.yml
docker/papertrade/: docker-compose.yml
output/: results_analytics.ipynb  results_analytics.py
trash/: .env  bot_header.py  builder.py  optim.py  temp.py
