[tool.poetry]
name = "blankly-rsi-example-with-docker"
version = "0.1.0"
description = "Trading stategy for Blankly Finance"
authors = ["c0indev3l <working4coins@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blankly_rsi_example_with_docker"}]

[tool.poetry.dependencies]
python = "^3.9"
blankly = {git = "https://github.com/blankly-finance/blankly.git", rev = "0f4d4837214c3c4357ad245454133d8d388d16e3"}
python-dotenv = "^1.0.0"
munch = "^4.0.0"
SQLAlchemy = "^2.0.19"
parquet-store = {git = "https://github.com/femtotrader/parquet-store/"}
parameters-explorer = {git = "https://github.com/femtotrader/parameters-explorer"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
